# EVOVAQ

./: README.md  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst  tools.rst  tutorials_trainVQCs.ipynb
evovaq/: CHCAlgorithm.py  HillClimbing.py  MemeticAlgorithm.py
evovaq/tools/: operators.py  support.py
