# Inside of setup.cfg
[metadata]
description-file = README.md
name = "evovaq"
version = "1.0.16"
author = "Angela Chiatto"
author_email = "angela.chiatto@unina.it"
description = "EVOlutionary algorithms toolbox for VAriational Quantum circuits"
long_description = README.md
long_description_content_type = "text/markdown"
url = "https://github.com/Quasar-UniNA/EVOVAQ"
license = "MIT"
